# git-workflow-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/git/: SKILL.md
.github/skills/github/: SKILL.md  run.sh
.github/skills/github/scripts/: commit-check.sh  commit_check.py  commit_format.py  fix-commit-messages.sh  format_commit_message.py  gh-api-push.py  pr-add-team-reviewers.sh  pr-complete-workflow.sh  pr-create.sh  pr-merge-master.sh  pr-ready.sh  pr-remove-files-from-remote.sh  pr-setup.sh  validate-commit-msg.py
