[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-workflow-cli"
version = "0.1.0"
description = "Unified CLI for Git and GitHub workflows (branch management, PR workflows, commit formatting, Zscaler-safe push)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Joshua Yeung", email = "joshua.yeung@moxbank.com"},
]
keywords = ["git", "github", "cli", "workflow", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/joshua-yeung-mox/git-workflow-cli"
Repository = "https://github.com/joshua-yeung-mox/git-workflow-cli.git"
Issues = "https://github.com/joshua-yeung-mox/git-workflow-cli/issues"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "W191",  # indentation contains tabs
]

[tool.ruff.isort]
profile = "black"
line-length = 100
